# OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  CelestialBody.h  Shader.h  Sphere.h  Texture.h
include/glad/: glad.h
src/: CMakeLists.txt  Camera.cpp  CelestialBody.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  glad.c  main.cpp
tests/: CMakeLists.txt  test_main.cpp  test_orbit.cpp
